# memory-refactor

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  package.json  pnpm-lock.yaml
docs/: epics.md  (+10 more)
services/memory-engine/: .env.example  pyproject.toml
services/memory-engine/alembic/: env.py
services/memory-engine/alembic/versions/: 20260502_0001_initial_memory_tables.py  20260503_0002_refactor_plan_identity_and_order.py  20260503_0003_raw_memory_events.py  20260503_0004_memory_embeddings.py  20260503_0005_memory_relationships.py  20260503_0006_review_decisions.py
services/memory-engine/src/memory_refactor/api/: __init__.py  main.py
services/memory-engine/src/memory_refactor/core/: __init__.py  agents.py  models.py  operations.py  ports.py  raw_batches.py  settings.py
services/memory-engine/src/memory_refactor/db/: __init__.py  session.py  tables.py
services/memory-engine/src/memory_refactor/worker/: __init__.py  activities.py  run_worker.py  starter.py  workflows.py
services/memory-engine/tests/: conftest.py  test_db_metadata.py  test_memory_graph_repository_mapping.py  test_memory_repository_mapping.py  test_models.py  test_raw_batches.py  test_raw_memory_event_repository_mapping.py  test_refactor_agent.py  test_refactor_run_repository_mapping.py  test_refactor_workflow_contracts.py  test_vector_index_repository_mapping.py
services/memory-engine/tests/integration/: test_memory_graph_repository.py  test_memory_repository.py  test_raw_memory_events_repository.py  test_refactor_runs_repository.py  test_vector_index_repository.py
(+41 files in other folders)
