[project]
name = "memory-refactor-engine"
version = "0.1.0"
description = "FastAPI and Temporal memory refactor engine"
readme = "../../README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.6",
  "pgvector>=0.3.6",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "sqlalchemy[asyncio]>=2.0.36",
  "temporalio>=1.9.0",
  "uvicorn[standard]>=0.32.1"
]

[project.optional-dependencies]
ai = [
  "langfuse>=2.53.0",
  "litellm>=1.53.7",
  "opentelemetry-sdk>=1.28.2",
  "pydantic-ai>=0.0.18"
]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.3"
]

[project.scripts]
memory-api = "memory_refactor.api.main:run"
memory-worker = "memory_refactor.worker.run_worker:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_refactor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require external runtime services such as Postgres or Temporal"
]
